# quantcrawl

./: .env.example  .gitignore  README.md  pyproject.toml  scrapy.cfg
docs/: project_spec.md  quant_crawl_plan.md
quantcrawl/: __init__.py  alerts.py  config.py  domain.py  job_loader.py  metrics.py  policy.py  policy_plugin.py  settings.py  spider_logging.py
quantcrawl/challenge/: __init__.py  detector.py  detector_loader.py  loader.py  orchestrator.py  provider.py  types.py
quantcrawl/items/: __init__.py  base.py
quantcrawl/jobs/: __init__.py
quantcrawl/jobs/demo_spider/: __init__.py  config.py  item.py  loader.py  pipeline.py  spider.py
quantcrawl/loaders/: base.py  processors.py
quantcrawl/middlewares/: __init__.py  challenge_detection.py  data_guard.py  header_policy.py  policy_binding.py  proxy_policy.py
quantcrawl/pipelines/: __init__.py  dedup.py  storage_router.py  validation.py
quantcrawl/spiders/: base.py
quantcrawl/utils/: db.py  notifier.py  retry.py
scripts/: new_job.sh  run_demo.sh
tests/: test_challenge.py  test_challenge_detection_middleware.py  test_challenge_detector.py  test_challenge_detector_loader.py  test_challenge_provider_loader.py  test_config.py  test_job_loader.py  test_policy.py  test_validation_pipeline.py
