[project]
name = "quantcrawl"
version = "0.1.0"
description = "A Quantitative Trading System Data Collection Platform Based on Scrapy."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "scrapy>=2.11,<3.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "python-dotenv>=1.0,<2.0",
  "fake-useragent>=1.5,<2.0",
  "scrapy-playwright>=0.0.36",
  "scrapy-redis>=0.9.1",
  "redis>=5.0,<6.0",
  "tenacity>=9.0,<10.0",
  "prometheus-client>=0.21,<1.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
